# OpenGL

./: .gitignore  .gitmodules  Opengl_project.sln  Opengl_project.vcxproj  Opengl_project.vcxproj.filters  README.md
.github/workflows/: cmake-multi-platform.yml
dependencies/linux/GLFW/libs/: libglfw.so.3.4
engine/: Application.cpp  Application.h  EntryPoint.cpp  Interfaces.h  Internal.h  MainApplication.cpp  MainApplication.h  MainThread.cpp  MainThread.h  MainThreadObserver.h  XEngine.h
engine/app/: Application.h  InternalApplication.h  MainApplication.cpp  MainApplication.h
engine/common/: Diagnostic.h  Exception.cpp  Exception.h  Log.cpp  Log.h  Timestamp.cpp  Timestamp.h
engine/component/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
engine/file/: Resources.h
engine/internal/: Application.h  InternalApplication.h  Lifecycle.h  MainThreadObserver.h  UI.h
engine/opengl/: Camera.cpp  Camera.h  GLEngine.cpp  GLEngine.h  IndexBuffer.cpp  IndexBuffer.h  Layout.cpp  Layout.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Textures.cpp  Textures.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
engine/opengl/render/: RenderData.cpp  RenderData.h  RenderDirector.cpp  RenderDirector.h  RenderDirectorBase.cpp  RenderDirectorBase.h  RenderGL.cpp  RenderGL.h  RenderGLBase.cpp  RenderGLBase.h  Renderer.cpp  Renderer.h  RendererAPI.h
engine/opengl/shapes/: Color.cpp  Color.h  Cube.cpp  Cube.h  Line.cpp  Line.h  Rectangle.cpp  Rectangle.h  Shape.h  Triangle.cpp  Triangle.h
engine/opengl/window/: Window.cpp  Window.h
engine/public/: XEngine.h
engine/res/shader/: Basic.shader  Basic_2.shader  Basic_texture.shader  base.shader  circle.shader  texture.shader
engine/ui/: AppUI.cpp  AppUI.h  DecoratorUI.cpp  DecoratorUI.h  Gui.cpp  Gui.h  UI.h  UIComponent.h  Widgets.cpp  Widgets.h
engine/window/: Window.cpp  Window.h  WindowConfigs.h
engine/window/events/: Event.h  EventListener.h
engine/window/input/: Input.cpp  Input.h  KeyCodes.h
linux/: Application.cpp  CMakeLists.txt
samples/BlankSample/: CMakeLists.txt  main.cpp
src/: Application.cpp
src/common/: Log.h
src/opengl/: IndexBuffer.h  Layout.cpp  Layout.h  VertexArray.h  VertexBuffer.h
src/opengl/window/: Window.cpp  Window.h
tests/: Application.cpp  Application.h  CMakeLists.txt  Gui.cpp  Gui.h  TestUI.cpp  TestUI.h
tests/basic_tests/: BackgroundColorTest.cpp  BackgroundColorTest.h  TestMenuUI.cpp  TestMenuUI.h
tests/basic_tests/base/: TestUI.cpp  TestUI.h
tests/ui_tests/: Application.cpp  Application.h  BackgroundColorTest.cpp  BackgroundColorTest.h  BatchingTest.cpp  BatchingTest.h  BlankTest.cpp  BlankTest.h  ComponentUIFactory.cpp  ComponentUIFactory.h  DynamicBatching.cpp  DynamicBatching.h  ShapesTest.cpp  ShapesTest.h  TestMenuUI.cpp  TestMenuUI.h  TextureTest.cpp  TextureTest.h
tests/ui_tests/base/: TestCase.cpp  TestCase.h  TestUI.cpp  TestUI.h
tests/unit_tests/: BasicScenerioTests.cpp  BasicScenerioTests.h  BasicTest.cpp  BasicTest.h  CMakeLists.txt  InitTests.cpp  InitTests.h  MemoryLeakTest.cpp  MemoryLeakTest.h  ShaderTests.cpp  ShaderTests.h
tests/unit_tests/base/: Assert.cpp  Assert.h  MemoryTracker.cpp  MemoryTracker.h  Registry.cpp  Registry.h  Test.h  TestLauncher.cpp
windows/: Opengl_project.vcxproj  Opengl_project.vcxproj.filters
windows/src/: Application.cpp
